--- a/namakmedia.html
+++ b/namakmedia.html
@@ -21,31 +21,32 @@
 </header>
 
 <!-- slider -->
-<div style="width: 100%; height:600px; border: 1px green solid;">
-<img  src="img/8.jpg" style="width: 100%; height: 600px;">
+<div id="slideDiv">
+<img id="slideImg"  src="#">
 </div>
 
 
 <!-- recntly portfolio -->
-  <div style="border: hotpink 1px solid;width: 100%; height: 500px; text-align: center;">
-      <img src="img/26.jpg" style="width: 300px; height: 300px;">
-      <img src="img/23.JPG" style="width: 300px; height: 300px; margin-left: 30px;margin-right: 30px;">
-      <img src="img/21.JPG" style="width: 300px; height: 300px;">
+  <div class="portfolioDiv">
+      <img src="#" class="portfolio">
+      <img src="#" class="portfolio " >
+      <img src="#" class="portfolio">
   </div> 
 
-<!-- brand -->
-  <div style="border: rgb(6, 19, 56) 1px solid;width: 100%; height: 300px; background-color: #F7BA0A;"></div>     
+<!-- customer -->
+  <div class="portfolioDiv customerDiv"></div>     
 
   <!-- team -->
-  <div style="border: rgb(97, 4, 50) 1px solid;width: 100%; height: 500px;">
-    <div style="height: 400px; width: 400px; border: indianred 1px solid ; float: right;"></div>
-    <div style="height: 400px; width: 400px; border: indianred 1px solid ;float: right;"></div>
-    <div style="height: 400px; width: 400px; border: indianred 1px solid ;float: right;"></div>
+  <div class="portfolioDiv">
+    <div class="userTeam"></div>
+    <div class="userTeam"></div>
+    <div class="userTeam"></div>
+
 </div>
  <!-- form request -->
-<div style="border: hotpink 1px solid;width: 100%; height: 500px;">
+<div  class="portfolioDiv">
     <form action="server.php" method="get">
-        <fieldset style="width: 50%; float: right;">
+        <fieldset class="formSet">
             <legend>فرم درخواست</legend>
            <input type="text" id="txtFirstName" name="txtFirstName" placeholder="ایمیل" /><br>
             <input type="text" id="txtFirstName" name="txtFirstName" placeholder="نام و نام خانوادگی :"/>
